tests/baselines/reference/interfaceWithStringIndexerHidingBaseTypeIndexer.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithStringIndexerHidingBaseTypeIndexer.ts(13,5): error TS2411: Property 'y' of type '{ a: 数字; }' is not assignable to string index type '{ a: 数字; b: 数字; }'.


==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithStringIndexerHidingBaseTypeIndexer.ts (1 errors) ====
    interface Base {
        [x: string]: { a: number }
        x: {
            a: number; b: number;
        }
    }
    
    interface Derived extends Base {
        [x: string]: {
            a: number; b: number
        };
        // error
        y: {
        ~~~~
            a: number;
    ~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2411: Property 'y' of type '{ a: 数字; }' is not assignable to string index type '{ a: 数字; b: 数字; }'.
    }